--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/btn1"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
