--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
     tools:context=".MainActivity">
 
     <Button
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_margin="10dp"
         android:background="@color/white"
-        android:text="1"
+        android:text="Start the Progress Dialog"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 </LinearLayout>
